--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       type="image/x-icon"
     />
     <!-- css -->
-    <link href="./style2.css" rel="stylesheet" type="text/css" />
+    <link href="./Employers/style2.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <div class="container">
@@ -40,7 +40,7 @@
           <!-- logo -->
           <div class="logo">
             <a href="https://useforward.app/home">
-              <img src="./images/Forward.svg" alt="logo" />
+              <img src="./Employers/images/Forward.svg" alt="logo" />
             </a>
           </div>
           <!-- buttons -->
@@ -63,10 +63,10 @@
         <div class="main_text">
           <div class="main_logo">
             <div class="main_logo logo">
-              <img src="../Employers/Images/Forward.svg" />
+              <img src="./Employers/Images/Forward.svg" />
             </div>
             <div class="main_logo divider">
-              <img src="../Employers/Images/Main_Divider.svg" />
+              <img src="./Employers/Images/Main_Divider.svg" />
             </div>
           </div>
           <div class="main_content">
@@ -122,19 +122,19 @@
           </div>
         </div>
         <div class="Second_Ring">
-          <img src="../Employers/Images/Second_Ring.svg" alt="" />
+          <img src="./Employers/Images/Second_Ring.svg" alt="" />
         </div>
       </div>
 
       <!-- part3 -->
       <div class="part3">
         <div class="extension">
-          <img src="../Employers/Images/Extension.svg" alt="" />
+          <img src="./Employers/Images/Extension.svg" alt="" />
         </div>
 
         <div class="features">
           <div class="rect_border_1">
-            <img src="../Employers/Images/Fast_And_Direct.svg" />
+            <img src="./Employers/Images/Fast_And_Direct.svg" />
             <div class="feature_1">
               <span> Fast and Direct</span>
               <span></span>
@@ -144,7 +144,7 @@
             </div>
           </div>
           <div class="rect_border_2">
-            <img src="../Employers/Images/Customized_Requirements.svg" />
+            <img src="./Employers/Images/Customized_Requirements.svg" />
             <div class="feature_2">
               <span>Customized Requirements</span>
               <span></span>
@@ -152,7 +152,7 @@
             </div>
           </div>
           <div class="rect_border_3">
-            <img src="../Employers/Images/Accurately_AI.svg" />
+            <img src="./Employers/Images/Accurately_AI.svg" />
             <div class="feature_3">
               <span> Accurately AI</span>
               <span></span>
@@ -163,7 +163,7 @@
             </div>
           </div>
           <div class="rect_border_4">
-            <img src="../Employers/Images/Always_Upskilling.svg" />
+            <img src="./Employers/Images/Always_Upskilling.svg" />
             <div class="feature_4">
               <span> Fast and Direct</span>
               <span></span>
@@ -180,7 +180,7 @@
     <!-- part4 -->
     <div class="part4">
       <div class="third_ring">
-        <img class="ring" src="../Employers/Images/Third_Ring_2.svg" />
+        <img class="ring" src="./Employers/Images/Third_Ring_2.svg" />
         <div class="planet_t"></div>
       </div>
       <div class="part4_content">
@@ -204,10 +204,10 @@
     <div class="part5">
       <p class="part5_content">We are working <span>With:</span></p>
       <div class="part5_images">
-        <img class="numind" src="../Employers/Images/NuMind.svg" />
+        <img class="numind" src="./Employers/Images/NuMind.svg" />
         <img
           class="sjsu"
-          src="../Employers/Images/2560px-San_Jose_State_University_logo 1.svg"
+          src="./Employers/Images/2560px-San_Jose_State_University_logo 1.svg"
         />
       </div>
     </div>
@@ -229,7 +229,7 @@
       <div class="red_planet">
         <img
           class="red_planet planet"
-          src="../Employers/Images/Red_Planet_2.svg"
+          src="./Employers/Images/Red_Planet_2.svg"
         />
         <div class="red_planet_t"></div>
       </div>
@@ -237,7 +237,7 @@
 
       <!-- Part 7 -->
     <div class="part7">
-      <img class="beta_form" src="../Employers/Images/undraw_resume_re_hkth-1.svg" alt="">
+      <img class="beta_form" src="./Employers/Images/undraw_resume_re_hkth-1.svg" alt="">
       <div class="part7_content">
         <p class="part7_content title">Join our Beta <span>Program</span></p>
         <p class="part7_content description">Sign up to our newsletter, and join our closed beta program, where you will meet with us and help us test all our new features before anyone else. Give your feedback, and together with us witness the revolution in candidate sourcing and hiring.
@@ -258,7 +258,7 @@
       <div class="footer_box">
         <div class="footer_copyright">
           <div class="footer_forward_logo">
-            <img src="../Employers/Images/Forward.svg" alt="">
+            <img src="./Employers/Images/Forward.svg" alt="">
           </div>
           <p>All rights reserved Copyright Grinning Co. 2023</p>
         </div>
