--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- <meta name="author" content=""> -->
-    <link rel="import" href="../Footer/footer.html" import="*">
+    <link rel="import" href="./Footer/footer.html" import="*">
     <link
       href="https://fonts.googleapis.com/css?family=Helvetica+Rounded&display=swap"
       rel="stylesheet"
