--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
 	href="https://web.archive.org/web/20220921124143im_/https://feedmeajob.com/images/favicon.png"
 	rel="shortcut icon" type="image/x-icon">
 <!-- css -->
-<link href="./about.css" rel="stylesheet" type="text/css">
+<link href="./About/about.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 
@@ -38,7 +38,7 @@
 				<!-- logo -->
 				<div class="logo">
 					<a href="https://useforward.app/home">
-						<img src="./images/Forward.svg" alt="logo" />
+						<img src="./Employers/images/Forward.svg" alt="logo" />
 					</a>
 				</div>
 				<!-- buttons -->
@@ -60,7 +60,7 @@
 		<div class="part_1">
 			<div class="part_1_content">
 				<p class="part_1_title">Forward is a Journey.</p>
-				<img src="../About/Images/about/Line.svg" alt="">
+				<img src="./About/Images/about/Line.svg" alt="">
 				<ul class="part_1_description">
 					<li>It’s a journey for job seekers on a quest to find a place where
 						they belong.</li>
@@ -69,20 +69,20 @@
 					<li>And it’s a journey for us, who are trying to create a world where these two can	find each other, as fairly and stress-free as possible.</li>
 				</ul>
 			</div>
-			<img src="../About/Images/about/part1.svg"></img>
+			<img src="./About/Images/about/part1.svg"></img>
 		</div>
 
 
 		<!-- part2 -->
 		<div class="part_2">
 			<div class="part_2_images">
-				<img class="second_ring" src="../About/Images/about/Group 69.svg" alt="">
-				<img class="forward_logo" src="../About/Images/about/Forward_Logo.svg" alt="">
+				<img class="second_ring" src="./About/Images/about/Group 69.svg" alt="">
+				<img class="forward_logo" src="./About/Images/about/Forward_Logo.svg" alt="">
 				<div class="forward_blur"></div>
 			</div>
 			<div class="part_2_content">
 				<p class="part_2_title">Our Story.</p>
-				<img src="./images/about/line.svg" alt="Line">
+				<img src="./About/images/about/line.svg" alt="Line">
 				<ul class="part_2_description">
 					<li>Our journey began with a deep-seated frustration over the 
 						inadequacy of existing job hunting resources and a lack of clarity 
@@ -101,12 +101,12 @@
 			<!-- 큰박스 -->
 			<div class="p3_b">
 				<p class="part_3_title" style="margin-bottom: 30px;">Our Team.</p>
-				<img src="./images/about/line.svg" alt="Line">
+				<img src="./About/images/about/line.svg" alt="Line">
 				<!-- 작은박스1 -->
 				<div class="p3_s" style="float: left;">
 					<!-- 사진+텍스트 -->
 					<div class="p3_s1">
-						<img src="./images/about/per1.svg" alt="per">
+						<img src="./About/images/about/per1.svg" alt="per">
 						<div class="intro">
 							<div class="intro_sub">
 								<div>Chinmay Rathod</div>
@@ -116,7 +116,7 @@
 					</div>
 					<!-- 사진+텍스트 -->
 					<div class="p3_s1">
-						<img src="./images/about/per2.svg" alt="per">
+						<img src="./About/images/about/per2.svg" alt="per">
 						<div class="intro">
 							<div class="intro_sub">
 								<div>Gautham Narayanan</div>
@@ -130,7 +130,7 @@
 				<div class="p3_s" style="float: left;">
 					<!-- 사진+텍스트 -->
 					<div class="p3_s1">
-						<img src="./images/about/per3.svg" alt="per">
+						<img src="./About/images/about/per3.svg" alt="per">
 						<div class="intro">
 							<div class="intro_sub">
 								<div>Trique Nguyen</div>
@@ -140,7 +140,7 @@
 					</div>
 					<!-- 사진+텍스트 -->
 					<div class="p3_s1">
-						<img src="./images/about/per4.svg" alt="per">
+						<img src="./About/images/about/per4.svg" alt="per">
 						<div class="intro">
 							<div class="intro_sub">
 								<div>Peter Pham</div>
@@ -150,7 +150,7 @@
 					</div>
 					<!-- 사진+텍스트 -->
 					<div class="p3_s1">
-						<img src="./images/about/per5.svg" alt="per">
+						<img src="./About/images/about/per5.svg" alt="per">
 						<div class="intro">
 							<div class="intro_sub">
 								<div>Auni Bagchi</div>
@@ -168,7 +168,7 @@
       <div class="footer_box">
         <div class="footer_copyright">
           <div class="footer_forward_logo">
-            <img src="../Employers/Images/Forward.svg" alt="">
+            <img src="./Employers/Images/Forward.svg" alt="">
           </div>
           <p>All rights reserved Copyright Grinning Co. 2023</p>
         </div>
