--- a/Privacy.html
+++ b/Privacy.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>Privacy Policy</h1>
-    <iframe src="Policy/Grinning Co.-Privacy Policy.pdf" width="100%" height="500px">
+    <iframe src="Documents/Grinning Co.-Privacy Policy.pdf" width="100%" height="500px">
     </iframe>
   </body>
 </html>
