--- a/TermsofService.html
+++ b/TermsofService.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>Terms of Service</h1>
-    <iframe src="Policy/Grinning Co.-Terms of Service.pdf" width="100%" height="700px">
+    <iframe src="Documents/Grinning Co.-Terms of Service.pdf" width="100%" height="700px">
     </iframe>
   </body>
 </html>
