--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<meta property="og:url" content ="https://useforward.app/about">
 <title>Feed Me a Job! - Your Job Search Partner</title>
 <!-- description meta tag -->
 <meta
@@ -38,13 +39,13 @@
 				<!-- logo -->
 				<div class="logo">
 					<a href="https://useforward.app/home">
-						<img src="./Employers/images/Forward.svg" alt="logo" />
+						<img src="Employers\Images\Forward.svg" alt="logo" />
 					</a>
 				</div>
 				<!-- buttons -->
 				<div class="buttons">
-					<div class="Employers">Employers</div>
-					<div class="About">About</div>
+					<div class="Employers"href = "./index.html">Employers</div>
+					<div class="About"href="./about.html">About</div>
 					<div class="BookDemo">
 						<a
 							href="https://forms.gle/wSrvKmLvtJe5wWYX7"
