--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
           <!-- logo -->
           <div class="logo">
             <a href="https://useforward.app/home">
-              <img src="./Employers/images/Forward.svg" alt="logo" />
+              <img src="Employers\Images\Forward.svg" alt="logo" />
             </a>
           </div>
           <!-- buttons -->
           <div class="buttons">
-            <div class="Employers">Employers</div>
-            <div class="About">About</div>
+            <div class="Employers"href = "./index.html">Employers</div>
+            <div class="About" href = "about.html">About</div>
             <div class="BookDemo">
               <a
                 href="https://forms.gle/wSrvKmLvtJe5wWYX7"
