--- a/about.html
+++ b/about.html
@@ -2,12 +2,13 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<meta property="og:url" content ="https://useforward.app/about">
+<meta http-equiv="refresh" content="0; URL=https://useforward.app/about">
 <title>Feed Me a Job! - Your Job Search Partner</title>
 <!-- description meta tag -->
 <meta
 	content="Feed Me a Job makes job searching easy. We offer you AI-powered guidance while matching you with the best open positions from multiple portals, all stress-free."
 	name="description">
+	<meta property="og:url" content ="https://useforward.app/about">
 <!-- 콘텐츠 유형 -->
 <!--   <meta property="og:type" content="website"> -->
 
@@ -44,8 +45,11 @@
 				</div>
 				<!-- buttons -->
 				<div class="buttons">
-					<div class="Employers"href = "./index.html">Employers</div>
-					<div class="About"href="./about.html">About</div>
+					<div class="Employers">
+						<a href= "./index.html">Home</a>
+					</div>
+					<div class="About">
+						<a href= "./about.html">About Us</a></div>
 					<div class="BookDemo">
 						<a
 							href="https://forms.gle/wSrvKmLvtJe5wWYX7"
