--- a/index.html
+++ b/index.html
@@ -45,8 +45,11 @@
           </div>
           <!-- buttons -->
           <div class="buttons">
-            <div class="Employers"href = "./index.html">Employers</div>
-            <div class="About" href = "about.html">About</div>
+            <div class="Employers">
+              <a href= "./index.html">Home</a>
+            </div>
+            <div class="About">
+              <a href= "./about.html">About Us</a></div>
             <div class="BookDemo">
               <a
                 href="https://forms.gle/wSrvKmLvtJe5wWYX7"
