--- a/about.html
+++ b/about.html
@@ -2,7 +2,9 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<meta http-equiv="refresh" content="0; URL=https://useforward.app/about">
+<meta name="about" content="https://useforward.app/about.html">
+
+<!-- <meta http-equiv="refresh" content="0; URL=https://useforward.app/about"> -->
 <title>Feed Me a Job! - Your Job Search Partner</title>
 <!-- description meta tag -->
 <meta
