--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<meta name="about" content="https://useforward.app/about.html">
+<meta name="about" content="https://useforward.app/about">
 
 <!-- <meta http-equiv="refresh" content="0; URL=https://useforward.app/about"> -->
 <title>Feed Me a Job! - Your Job Search Partner</title>
