--- a/Privacy.html
+++ b/Privacy.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta name="about" content="https://useforward.app/Privacy">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy</title>
   </head>
   <body>
