--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="about" content="https://useforward.app/about">
 
 <!-- <meta http-equiv="refresh" content="0; URL=https://useforward.app/about"> -->
@@ -51,7 +52,7 @@
 						<a href= "./index.html">Home</a>
 					</div>
 					<div class="About">
-						<a href= "./about.html">About Us</a></div>
+						<a href= "./abou.html">About Us</a></div>
 					<div class="BookDemo">
 						<a
 							href="https://forms.gle/wSrvKmLvtJe5wWYX7"
@@ -76,7 +77,7 @@
 					<li>And it’s a journey for us, who are trying to create a world where these two can	find each other, as fairly and stress-free as possible.</li>
 				</ul>
 			</div>
-			<img src="./About/Images/about/part1.svg"></img>
+			<img src="About\Images\about\part1.svg"></img>
 		</div>
 
 
@@ -89,7 +90,7 @@
 			</div>
 			<div class="part_2_content">
 				<p class="part_2_title">Our Story.</p>
-				<img src="./About/images/about/line.svg" alt="Line">
+				<img src="About\Images\about\Line.svg" alt="Line">
 				<ul class="part_2_description">
 					<li>Our journey began with a deep-seated frustration over the 
 						inadequacy of existing job hunting resources and a lack of clarity 
@@ -108,12 +109,12 @@
 			<!-- 큰박스 -->
 			<div class="p3_b">
 				<p class="part_3_title" style="margin-bottom: 30px;">Our Team.</p>
-				<img src="./About/images/about/line.svg" alt="Line">
+				<img src="About\Images\about\Line.svg" alt="Line">
 				<!-- 작은박스1 -->
 				<div class="p3_s" style="float: left;">
 					<!-- 사진+텍스트 -->
 					<div class="p3_s1">
-						<img src="./About/images/about/per1.svg" alt="per">
+						<img src="About\Images\about\per1.svg" alt="per">
 						<div class="intro">
 							<div class="intro_sub">
 								<div>Chinmay Rathod</div>
@@ -123,7 +124,7 @@
 					</div>
 					<!-- 사진+텍스트 -->
 					<div class="p3_s1">
-						<img src="./About/images/about/per2.svg" alt="per">
+						<img src="About\Images\about\per2.svg" alt="per">
 						<div class="intro">
 							<div class="intro_sub">
 								<div>Gautham Narayanan</div>
@@ -137,7 +138,7 @@
 				<div class="p3_s" style="float: left;">
 					<!-- 사진+텍스트 -->
 					<div class="p3_s1">
-						<img src="./About/images/about/per3.svg" alt="per">
+						<img src="About\Images\about\per3.svg" alt="per">
 						<div class="intro">
 							<div class="intro_sub">
 								<div>Trique Nguyen</div>
@@ -147,7 +148,7 @@
 					</div>
 					<!-- 사진+텍스트 -->
 					<div class="p3_s1">
-						<img src="./About/images/about/per4.svg" alt="per">
+						<img src="About\Images\about\per4.svg" alt="per">
 						<div class="intro">
 							<div class="intro_sub">
 								<div>Peter Pham</div>
@@ -157,7 +158,7 @@
 					</div>
 					<!-- 사진+텍스트 -->
 					<div class="p3_s1">
-						<img src="./About/images/about/per5.svg" alt="per">
+						<img src="About\Images\about\per5.svg" alt="per">
 						<div class="intro">
 							<div class="intro_sub">
 								<div>Auni Bagchi</div>
