--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Forward! - Your Job Search Partner</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- description meta tag -->
     <meta
       content="Feed Me a Job makes job searching easy. We offer you AI-powered guidance while matching you with the best open positions from multiple portals, all stress-free."
