--- a/TermsofService.html
+++ b/TermsofService.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <h1>Terms of Service</h1>
+    <a href="https://useforward.app/">Homepage</a>
     <iframe src="Documents/Grinning Co.-Terms of Service.pdf" width="100%" height="700px">
     </iframe>
   </body>
