--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
 						<a href= "./index.html">Home</a>
 					</div>
 					<div class="About">
-						<a href= "./abou.html">About Us</a></div>
+						<a href= "./about.html">About Us</a></div>
 					<div class="BookDemo">
 						<a
 							href="https://forms.gle/wSrvKmLvtJe5wWYX7"
@@ -207,8 +207,8 @@
             <ol>
               <p>Others</p>
               <ul>
-                <a>Privacy Policy</a>
-                <a>Terms of Use</a>
+                <a href="./Privacy.html">Privacy Policy</a>
+                <a href="./TermsofService.html">Terms of Use</a>
               </ul>
             </ol>
           </div>
