--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
               <p>Quick Links</p>
               <ul>
                 <li><a href="https://useforward.app/home">Employers</a></li>
-                <li><a href="https://useforward.app/about">About</a></li>
+                <li><a href="./about.html">About</a></li>
                 <li><a
                   href="https://forms.gle/wSrvKmLvtJe5wWYX7"
                   >Book Demo</a></li>
@@ -293,8 +293,8 @@
             <ol>
               <p>Others</p>
               <ul>
-                <a>Privacy Policy</a>
-                <a>Terms of Use</a>
+                <a href="./Privacy.html">Privacy Policy</a>
+                <a href = "./TermsofService.html">Terms of Use</a>
               </ul>
             </ol>
           </div>
