--- a/about.html
+++ b/about.html
@@ -42,17 +42,17 @@
 			<div class="nav">
 				<!-- logo -->
 				<div class="logo">
-					<a href="https://useforward.app/home">
+					<a href="https://useforward.app/">
 						<img src="Employers\Images\Forward.svg" alt="logo" />
 					</a>
 				</div>
 				<!-- buttons -->
 				<div class="buttons">
 					<div class="Employers">
-						<a href= "./index.html">Home</a>
+						<a href= "./index.html"><div class="Employers">Home</div></a>
 					</div>
 					<div class="About">
-						<a href= "./about.html">About Us</a></div>
+						<a href= "./about.html"><div class="About">About</div></a></div>
 					<div class="BookDemo">
 						<a
 							href="https://forms.gle/wSrvKmLvtJe5wWYX7"
@@ -185,7 +185,7 @@
             <ol>
               <p>Quick Links</p>
               <ul>
-                <li><a href="https://useforward.app/home">Employers</a></li>
+                <li><a href="https://useforward.app/home">Home</a></li>
                 <li><a href="https://useforward.app/about">About</a></li>
                 <li><a
                   href="https://forms.gle/wSrvKmLvtJe5wWYX7"
