--- a/Privacy.html
+++ b/Privacy.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Privacy Policy</h1>
-    <a href="https://useforward.app/">Homepage</a>
+    <a href="https://useforward.app/">Home</a>
     <iframe src="Documents/Grinning Co.-Privacy Policy.pdf" width="100%" height="500px">
     </iframe>
   </body>
